Update SEO Web Site

--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Likecoder</title>
+    <title>Likecoder - Criação de Websites Personalizados</title>
+    <meta name="description" content="LikeCoder oferece serviços de criação de websites personalizados para atender às suas necessidades exclusivas.">
+    <meta name="keywords" content="criação de websites, desenvolvimento web, design de sites">
+    <!-- Meta tags Open Graph para compartilhamento em redes sociais -->
+    <meta property="og:title" content="LikeCoder">
+    <meta property="og:description" content="Transforme sua Visão em Realidade com Nossos Serviços Personalizados de Criação de Websites">
+    <meta property="og:image" content="https://likecoder.com.br/assets/img/logo.png">
+    <meta property="og:url" content="https://likecoder.com.br/">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <section id="header">
         <div class="header-logo">
-            <img src="assets/img/logo.png" alt="Logo">
+            <img src="assets/img/logo.png" alt="Logo da LikeCoder">
         </div>
         <div class="header-nav">
             <ul>
-                <li><a href="">Contato</a></li>
-                <li class="active"><a href="">Projetos</a></li>
+                <li><a href="/contato">Contato</a></li>
+                <li class="active"><a href="/projetos">Projetos</a></li>
             </ul>
         </div>
     </section>
