--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Meta tags Open Graph para compartilhamento em redes sociais -->
     <meta property="og:title" content="LikeCoder">
     <meta property="og:description" content="Transforme sua Visão em Realidade com Nossos Serviços Personalizados de Criação de Websites">
-    <meta property="og:image" content="https://likecoder.com.br/assets/img/logo.png">
+    <meta property="og:image" content="https://likecoder.com.br/assets/img/background.jpg">
     <meta property="og:url" content="https://likecoder.com.br/">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="assets/css/style.css">
