--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     <a href="https://wa.me/5544991357680" class="text-gray-300 hover:text-white transition">
                         <i class="fab fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="https://instagram.com/likecoder" class="text-gray-300 hover:text-white transition">
+                    <a href="https://instagram.com/likecoderbrazil" class="text-gray-300 hover:text-white transition">
                         <i class="fab fa-instagram text-xl"></i>
                     </a>
                     <a href="mailto:contato@likecoder.com" class="text-gray-300 hover:text-white transition">
