--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold mb-1">Instagram</h4>
-                                    <a href="https://instagram.com/likecoder" class="text-gray-600 hover:text-primary transition">@likecoder</a>
+                                    <a href="https://instagram.com/likecoderbrazil" class="text-gray-600 hover:text-primary transition">@likecoderbrazil</a>
                                 </div>
                             </div>
                         </div>
@@ -498,7 +498,7 @@
         <div class="max-w-6xl mx-auto">
             <div class="flex flex-col md:flex-row justify-between items-center mb-8">
                 <a href="#" class="text-2xl font-bold mb-6 md:mb-0">
-                    <span class="text-white">Like</span> <span class="text-primary">Coder</span>
+                    <span class="text-white">Like</span><span class="text-primary">Coder</span>
                 </a>
                 
                 <div class="flex space-x-6">
